--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formidable": "^3.5.4",
     "jspdf": "^3.0.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
