--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.802.0",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -22,6 +23,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/formidable": "^3.4.5",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
